<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="316dp"
        android:layout_marginEnd="316dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btnNewGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clField"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/ivDownArrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="357dp"
            android:layout_marginTop="165dp"
            android:layout_marginEnd="358dp"
            android:layout_marginBottom="165dp"
            android:background="@drawable/ball"
            android:contentDescription="@string/pongBall"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivPaddleLeft"
            android:layout_width="10dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/paddle"
            android:contentDescription="@string/paddleLeft"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivPaddleRight"
            android:layout_width="10dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/paddle"
            android:contentDescription="@string/paddleRight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/ivDownArrow"
        android:layout_width="73dp"
        android:layout_height="62dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/flat_dark26" />

    <ImageView
        android:id="@+id/ivUpArrow"
        android:layout_width="75dp"
        android:layout_height="64dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/flat_dark25" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/lblPlayerScore"
        app:layout_constraintBottom_toTopOf="@+id/tvPlayerScore"
        app:layout_constraintEnd_toStartOf="@+id/btnNewGame"
        app:layout_constraintStart_toEndOf="@+id/ivDownArrow" />

    <TextView
        android:id="@+id/tvPlayerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/playerScore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/lblCpuScore"
        app:layout_constraintBottom_toTopOf="@+id/tvCpuScore"
        app:layout_constraintEnd_toStartOf="@+id/ivUpArrow"
        app:layout_constraintStart_toEndOf="@+id/btnNewGame" />

    <TextView
        android:id="@+id/tvCpuScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/cpuScore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6" />


</android.support.constraint.ConstraintLayout>